# fb

./: .gitignore  .travis.yml  LICENSE  MarketingTests.hs  README.md  TODO  example.hs  fb.cabal  stack.yaml
docs/: Marketing.md
src/: Facebook.hs
src/Facebook/: Auth.hs  Base.hs  FQL.hs  Graph.hs  Monad.hs  OpenGraph.hs  Pager.hs  RealTime.hs  Records.hs  TestUsers.hs  Types.hs
src/Facebook/Object/: Action.hs  Checkin.hs  FriendList.hs  Order.hs  Page.hs  User.hs
src/Facebook/Object/Marketing/: Ad.hs  AdAccount.hs  AdAccountGen.hs  AdAccountGroup.hs  AdAccountGroupPlayground.hs  AdAccountPlayground.hs  AdCampaign.hs  AdCreative.hs  AdGroup.hs  AdImage.hs  AdLabel.hs  AdSet.hs  AdUser.hs  GettingStarted.hs  ImageCrop.hs  Insights.hs  TargetingSpecs.hs  Types.hs  Utility.hs
src/Facebook/Object/Marketing/TargetingSpecs/: Demographies.hs  Location.hs  Mobile.hs  Placement.hs
src/Facebook/OpenGraph/: Base.hs
tests/: Main.hs  runtests.hs  tryIt.hs
