name:              fb
version:           0.14.5
license:           BSD3
license-file:      LICENSE
author:            Felipe Lessa
maintainer:        Felipe Lessa <felipe.lessa@gmail.com>
synopsis:          Bindings to Facebook's API.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/meteficha/fb

description:
  This package exports bindings to Facebook's APIs (see
  <http://developers.facebook.com/>).  Does not have any external
  dependencies and tries to use as little resources (such as
  memory, sockets and CPU) as possible by using packages such as
  @aeson@, @attoparsec@, @bytestring@, @conduit@, @http-conduit@,
  @text@ and others.
  .
  While we would like to have a complete binding to Facebook's
  API, this package is being developed on demand.  If you need
  something that has not been implemented yet, please send a pull
  request or file an issue on GitHub
  (<https://github.com/meteficha/fb/issues>).

extra-source-files:
  tests/Main.hs
  tests/tryIt.hs
  example.hs


source-repository head
  type:     git
  location: git://github.com/meteficha/fb.git


flag debug
  default: False
  description: Print debugging info.


library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Facebook
  other-modules:
    Facebook.Types
    Facebook.Monad
    Facebook.Base
    Facebook.Auth
    Facebook.Graph
    Facebook.Object.Action
    Facebook.Object.Checkin
    Facebook.Object.User
    Facebook.Object.Page
    Facebook.RealTime
    Facebook.FQL
    Facebook.TestUsers
  build-depends:
      base                 >= 4       && < 5
    , lifted-base          >= 0.1     && < 0.3
    , bytestring           >= 0.9     && < 0.11
    , text                 == 0.11.*
    , transformers         >= 0.2     && < 0.4
    , transformers-base
    , monad-control
    , resourcet
    , conduit              == 1.0.*
    , data-default
    , http-types
    , http-conduit         == 1.9.*
    , attoparsec           == 0.10.*
    , attoparsec-conduit   == 1.0.*
    , unordered-containers
    , aeson                >= 0.5     && < 0.7
    , base16-bytestring    >= 0.1
    , base64-bytestring    >= 0.1.1
    , time                 >= 1.2     && < 1.5
    , old-locale
    , cereal               == 0.3.*
    , crypto-api           >= 0.11    && < 0.13
    , cryptohash           >= 0.7
    , cryptohash-cryptoapi == 0.1.*
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    OverloadedStrings
    GADTs
    StandaloneDeriving
    ScopedTypeVariables
    GeneralizedNewtypeDeriving
    TypeFamilies
    FlexibleInstances
    MultiParamTypeClasses
  if flag(debug)
    cpp-options: -DDEBUG


test-suite runtests
  type: exitcode-stdio-1.0
  ghc-options:    -Wall -fno-warn-orphans
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends:
      -- Library dependencies used on the tests.  No need to
      -- specify versions since they'll use the same as above.
      base, lifted-base, transformers, bytestring,
      conduit, http-conduit, text, time, aeson, monad-control

      -- Test-only dependencies
    , containers
    , data-default
    , HUnit
    , QuickCheck
    , hspec >= 1.4 && < 1.6
    , fb
  extensions:
    TypeFamilies
    ScopedTypeVariables
