name:              fb
version:           1.0.11
license:           BSD3
license-file:      LICENSE
author:            Felipe Lessa
maintainer:        Felipe Lessa <felipe.lessa@gmail.com>
copyright:         (c) Prowdsponsor
synopsis:          Bindings to Facebook's API.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/prowdsponsor/fb

description:
  This package exports bindings to Facebook's APIs (see
  <http://developers.facebook.com/>).  Does not have any external
  dependencies and tries to use as little resources (such as
  memory, sockets and CPU) as possible by using packages such as
  @aeson@, @attoparsec@, @bytestring@, @conduit@, @http-conduit@,
  @text@ and others.
  .
  While we would like to have a complete binding to Facebook's
  API, this package is being developed on demand.  If you need
  something that has not been implemented yet, please send a pull
  request or file an issue on GitHub
  (<https://github.com/prowdsponsor/fb/issues>).

extra-source-files:
  tests/Main.hs
  tests/tryIt.hs
  example.hs


source-repository head
  type:     git
  location: git://github.com/prowdsponsor/fb.git


flag debug
  default: False
  description: Print debugging info.

flag conduit11
  description: Use conduit >= 1.1.

library
  hs-source-dirs: src
  exposed-modules:
    Facebook
    Facebook.Records
    Facebook.Object.Marketing.Ad
    Facebook.Object.Marketing.AdUser
    Facebook.Object.Marketing.AdAccount
    Facebook.Object.Marketing.AdAccountPlayground
    Facebook.Object.Marketing.AdAccountGen
    Facebook.Object.Marketing.AdCampaign
    Facebook.Object.Marketing.AdCreative
    Facebook.Object.Marketing.AdAccountGroup
    Facebook.Object.Marketing.AdAccountGroupPlayground
    Facebook.Object.Marketing.AdSet
    Facebook.Object.Marketing.AdImage
    Facebook.Object.Marketing.ImageCrop
    Facebook.Object.Marketing.Insights
    Facebook.Object.Marketing.Utility
    Facebook.Object.Marketing.Types
    Facebook.Object.Marketing.TargetingSpecs
    Facebook.Object.Marketing.TargetingSpecs.Demographies
    Facebook.Object.Marketing.TargetingSpecs.Location
    Facebook.Object.Marketing.TargetingSpecs.Mobile
    Facebook.Object.Marketing.TargetingSpecs.Placement
    Facebook.Object.Marketing.GettingStarted
  other-modules:
    Facebook.Types
    Facebook.Monad
    Facebook.Base
    Facebook.Auth
    Facebook.Pager
    Facebook.Graph
    Facebook.Object.Action
    Facebook.Object.FriendList
    Facebook.Object.Checkin
    Facebook.Object.User
    Facebook.Object.Page
    Facebook.Object.Order
    Facebook.RealTime
    Facebook.FQL
    Facebook.TestUsers
  build-depends:
      base                 >= 4       && < 5
    , lifted-base          >= 0.1     && < 0.3
    , bytestring           >= 0.9     && < 0.11
    , text                 >= 0.11    && < 1.3
    , transformers         >= 0.2     && < 0.5
    , transformers-base
    , monad-control
    , resourcet
    , data-default
    , http-types
    , http-conduit         >= 2.0     && < 2.2
    , http-client
    , attoparsec           >= 0.10.4  && < 0.14
    , unordered-containers
    , aeson                >= 0.5     && < 0.10
    , base16-bytestring    >= 0.1
    , base64-bytestring    >= 0.1.1
    , containers
    --, thyme
    , time                 >= 1.2     && < 1.6
    , old-locale
    , cereal               >= 0.3     && < 0.5
    , crypto-api           >= 0.11    && < 0.14
    , cryptohash           >= 0.7
    , cryptohash-cryptoapi == 0.1.*
    , monad-logger         >= 0.3
    , vector
  if flag(conduit11)
    build-depends:
        conduit              >= 1.1   && < 1.3
      , conduit-extra        == 1.1.*
  else
    build-depends:
        conduit              == 1.0.*
      , attoparsec-conduit   == 1.0.*
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    OverloadedStrings
    GADTs
    StandaloneDeriving
    ScopedTypeVariables
    GeneralizedNewtypeDeriving
    TypeFamilies
    TypeOperators
    FlexibleInstances
    FlexibleContexts
    MultiParamTypeClasses
  if flag(debug)
    cpp-options: -DDEBUG

executable facebook-marketing-test
  main-is:             MarketingTests.hs
  default-language:    Haskell2010
  build-depends:     base >=4.6 && <5
                     , fb
                     , http-conduit ==2.1.*
                     , resourcet
                     , mtl
                     , text
                     , time


test-suite runtests
  type: exitcode-stdio-1.0
  ghc-options:    -Wall -fno-warn-orphans
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends:
      -- Library dependencies used on the tests.  No need to
      -- specify versions since they'll use the same as above.
      base, lifted-base, transformers, bytestring, resourcet,
      conduit, http-conduit, text, time, aeson, monad-control

      -- Test-only dependencies
    , containers
    , data-default
    , HUnit
    , QuickCheck
    , hspec >= 1.9 && < 1.12
    , fb
  extensions:
    TypeFamilies
    ScopedTypeVariables
