name:              fb
version:           1.0.13
license:           BSD3
license-file:      LICENSE
author:            Felipe Lessa
maintainer:        Felipe Lessa <felipe.lessa@gmail.com>
copyright:         (c) Prowdsponsor
synopsis:          Bindings to Facebook's API.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/prowdsponsor/fb

description:
  This package exports bindings to Facebook's APIs (see
  <http://developers.facebook.com/>).  Does not have any external
  dependencies and tries to use as little resources (such as
  memory, sockets and CPU) as possible by using packages such as
  @aeson@, @attoparsec@, @bytestring@, @conduit@, @http-conduit@,
  @text@ and others.
  .
  While we would like to have a complete binding to Facebook's
  API, this package is being developed on demand.  If you need
  something that has not been implemented yet, please send a pull
  request or file an issue on GitHub
  (<https://github.com/prowdsponsor/fb/issues>).

extra-source-files:
  tests/Main.hs
  tests/tryIt.hs
  example.hs


source-repository head
  type:     git
  location: git://github.com/prowdsponsor/fb.git


flag debug
  default: False
  description: Print debugging info.

flag conduit11
  description: Use conduit >= 1.1.

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Facebook
  other-modules:
    Facebook.Auth
    Facebook.Base
    Facebook.FQL
    Facebook.Graph
    Facebook.Monad
    Facebook.Object.Action
    Facebook.Object.Checkin
    Facebook.Object.FriendList
    Facebook.Object.Order
    Facebook.Object.Page
    Facebook.Object.User
    Facebook.Pager
    Facebook.RealTime
    Facebook.TestUsers
    Facebook.Types
  build-depends:
      base                 >= 4       && < 5
    , aeson                >= 0.5
    , attoparsec           >= 0.10.4  && < 0.14
    , base16-bytestring    >= 0.1
    , base64-bytestring    >= 0.1.1
    , bytestring           >= 0.9     && < 0.11
    , cereal               >= 0.3     && < 0.6
    , crypto-api           >= 0.11    && < 0.14
    , cryptohash           >= 0.7
    , cryptohash-cryptoapi == 0.1.*
    , data-default
    , exceptions
    , http-conduit         >= 2.0     && < 2.2
    , http-types
    , lifted-base          >= 0.1     && < 0.3
    , monad-control
    , monad-logger         >= 0.3
    , old-locale
    , resourcet
    , text                 >= 0.11    && < 1.3
    , time                 >= 1.2     && < 1.7
    , transformers         >= 0.2     && < 0.6
    , transformers-base
    , unordered-containers
  if flag(conduit11)
    build-depends:
        conduit              >= 1.1   && < 1.3
      , conduit-extra        == 1.1.*
  else
    build-depends:
        conduit              == 1.0.*
      , attoparsec-conduit   == 1.0.*
  extensions:
    DeriveDataTypeable
    EmptyDataDecls
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
  if flag(debug)
    cpp-options: -DDEBUG


test-suite runtests
  type: exitcode-stdio-1.0
  ghc-options:    -Wall -fno-warn-orphans
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends:
      -- Library dependencies used on the tests.  No need to
      -- specify versions since they'll use the same as above.
      base, lifted-base, transformers, bytestring, resourcet,
      conduit, http-conduit, text, time, aeson, monad-control

      -- Test-only dependencies
    , containers
    , data-default
    , HUnit
    , QuickCheck
    , hspec >= 1.9
    , fb
  extensions:
    TypeFamilies
    ScopedTypeVariables
